Update Twitter profile link to @itsMattMac

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
       </label>
     </div>
     <div class="social-container">
-      <a href="https://x.com/mattmacpherson" target="_blank" class="twitter-button">
+      <a href="https://x.com/itsMattMac" target="_blank" class="twitter-button">
         Follow @itsMattMac
       </a>
     </div>
