Add stats container to display number of blocked posts in popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,6 +14,14 @@
         <span class="slider round"></span>
       </label>
     </div>
+    
+    <div class="stats-container">
+      <div class="stat-count">
+        <span id="blockedCount">0</span>
+      </div>
+      <div class="stat-label">Posts Blocked</div>
+    </div>
+    
     <div class="social-container">
       <a href="https://x.com/itsMattMac" target="_blank" class="twitter-button">
         Follow @itsMattMac
