Rename extension from DashBlocker to DeadDash across all files

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DashBlocker</title>
+  <title>DeadDash</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <div class="container">
     <header>
       <div class="logo">
-        <span class="app-name">DashBlocker</span>
+        <span class="app-name">DeadDash</span>
       </div>
     </header>
     
