Add emoji blocking options for pointing down and thread emojis

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>DeadDash</title>
   <link rel="stylesheet" href="popup.css">
 </head>
@@ -25,6 +26,26 @@
           <span class="toggle-label">Extension Enabled</span>
           <label class="switch">
             <input type="checkbox" id="toggleSwitch" checked>
+            <span class="slider"></span>
+          </label>
+        </div>
+      </section>
+      
+      <section class="section">
+        <div class="toggle-row">
+          <span class="toggle-label">Block 👇 Pointing Down Emoji</span>
+          <label class="switch">
+            <input type="checkbox" id="toggleEmojiSwitch">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </section>
+      
+      <section class="section">
+        <div class="toggle-row">
+          <span class="toggle-label">Block 🧵 Thread Emoji</span>
+          <label class="switch">
+            <input type="checkbox" id="toggleThreadEmojiSwitch">
             <span class="slider"></span>
           </label>
         </div>
