Rename extension toggle to em-dash toggle and improve tweet processing logic

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,9 +23,9 @@
       
       <section class="section">
         <div class="toggle-row">
-          <span class="toggle-label">Extension Enabled</span>
+          <span class="toggle-label">Block Em Dash (—)</span>
           <label class="switch">
-            <input type="checkbox" id="toggleSwitch" checked>
+            <input type="checkbox" id="toggleEmDashSwitch" checked>
             <span class="slider"></span>
           </label>
         </div>
