Add police car light emoji blocking feature and toggle in popup UI

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -50,6 +50,16 @@
           </label>
         </div>
       </section>
+      
+      <section class="section">
+        <div class="toggle-row">
+          <span class="toggle-label">Block 🚨 Police Car Light Emoji</span>
+          <label class="switch">
+            <input type="checkbox" id="togglePoliceEmojiSwitch">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </section>
     </main>
     
     <footer>
