Add analytics page and detailed block count tracking

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,6 +11,7 @@
       <div class="logo">
         <span class="app-name">DeadDash</span>
       </div>
+      <button id="analyticsButton" class="analytics-button" title="View Analytics">📊</button>
     </header>
     
     <main>
