--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,9 +23,16 @@
       
       <section class="section">
         <div class="toggle-row">
-          <span class="toggle-label">Block Em Dash (—)</span>
+          <span class="toggle-label">Block Em Dash on Twitter/X</span>
           <label class="switch">
-            <input type="checkbox" id="toggleEmDashSwitch" checked>
+            <input type="checkbox" id="toggleTwitterSwitch" checked>
+            <span class="slider"></span>
+          </label>
+        </div>
+        <div class="toggle-row">
+          <span class="toggle-label">Block Em Dash on Reddit</span>
+          <label class="switch">
+            <input type="checkbox" id="toggleRedditSwitch" checked>
             <span class="slider"></span>
           </label>
         </div>
